RESOLVED FIXED277487
Fix missing r in inactiveMediaCaptureSteamRepromptIntervalInMinutes preference
https://bugs.webkit.org/show_bug.cgi?id=277487
Summary Fix missing r in inactiveMediaCaptureSteamRepromptIntervalInMinutes preference
youenn fablet
Reported 2024-08-01 06:45:55 PDT
Fix missing r in inactiveMediaCaptureSteamRepromptIntervalInMinutes preference
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-01 06:50:50 PDT
youenn fablet
Comment 2 2024-08-01 06:51:50 PDT
EWS
Comment 3 2024-08-02 00:00:15 PDT
Committed 281749@main (7ee97aa00a72): <https://commits.webkit.org/281749@main> Reviewed commits have been landed. Closing PR #31599 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.