Fix missing r in inactiveMediaCaptureSteamRepromptIntervalInMinutes preference https://bugs.webkit.org/show_bug.cgi?id=277487 rdar://problem/132983393

Reviewed by Chris Dumez.

We fix the typo and update The C and ObjC corresponding APIs.
This is ok updating the APIs since they are only used within WebKit.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetInactiveMediaCaptureStreamRepromptIntervalInMinutes):
(WKPreferencesGetInactiveMediaCaptureStreamRepromptIntervalInMinutes):
(WKPreferencesSetInactiveMediaCaptureSteamRepromptIntervalInMinutes): Deleted.
(WKPreferencesGetInactiveMediaCaptureSteamRepromptIntervalInMinutes): Deleted.
* Source/WebKit/UIProcess/API/C/WKPreferencesRefPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences _inactiveMediaCaptureStreamRepromptIntervalInMinutes]):
(-[WKPreferences _setInactiveMediaCaptureStreamRepromptIntervalInMinutes:]):
(-[WKPreferences _inactiveMediaCaptureSteamRepromptIntervalInMinutes]): Deleted.
(-[WKPreferences _setInactiveMediaCaptureSteamRepromptIntervalInMinutes:]): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
* Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::captureStateChanged):
* Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
(TestWebKitAPI::(WebKit2, EnumerateDevicesAfterMuting)):
* Tools/TestWebKitAPI/Tests/WebKit/GetUserMediaReprompt.mm:
(TestWebKitAPI::TEST(WebKit2, GetUserMediaReprompt)):

Canonical link: https://commits.webkit.org/281749@main